--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "nspack-server",
 	"description": "NodeSite.eu Packager Server",
-	"version": "0.0.0",
+	"version": "0.1.0",
 	"main": "lib/index.js",
 	"bin": {
 		"nspack-server": "lib/cli.js"
@@ -18,7 +18,6 @@
 	"keywords": [],
 	"dependencies": {
 		"nodesite.eu-local": "^1.2.0",
-		"nslibmgr": "^0.1.2",
-		"pkg": "^5.2.1"
+		"nslibmgr": "^0.1.2"
 	}
 }
